# graphie

./: .gitignore  CMakeLists.txt  README.md  main.cpp
graph/: graph.cpp  graph.h
math/: math.h
render/: render.h
render/shapes/: line.cpp  line.h  point.cpp  point.h  rectangle.cpp  rectangle.h
tinyexpr/: tinyexpr.c
